Remove smallrye metrics