@@ -25,7 +25,7 @@ public abstract class TestBase {
         assertNotNull(response.getErrors());
         assertFalse(response.getErrors().isEmpty());
 
-        ServiceError error = response.getErrors().get(0);
+        ServiceError error = response.getErrors().getFirst();
         assertEquals(ErrorSeverity.INFO, error.getSeverity());
         assertEquals("ENTITY_NOT_FOUND", error.getMessageId());
         assertEquals("The identified entity cannot be found.", error.getMessage());
